@@ -12,9 +12,16 @@ struct stat *buffer;
   strcpy(statpath, path);
   strip_trailing_slashes (statpath);
   if(strcmp(statpath, ".") == 0)
-     getwd(statpath);
+  {
+      char *wd;
+      wd = xgetwd ();
+      rs = stat (wd, buffer);
+      free (wd);
+  }
+  else
+      rs = stat (statpath, buffer);
 
-  if ((rs = stat (statpath, buffer)) < 0)
+  if (rs < 0)
       {
       /* If stat() fails try again after appending ".dir" to the filename
          this allows you to stat things like "bloogle/CVS" from VMS 6.1 */
